--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
   <section class="first-section">
     <div class="container">
       <h1 class="first-section-title">ПРОСТОЙ ПРИМЕР МОДАЛКИ</h1>
-      <button class="modal-window-open">Открыть модалку</button>
+      <button class="modal-window-open">Открыть МОДАЛКУ</button>
     </div>
   </section>
 
   <!-- МОдальное окно которое скрыто. Ему через JS задаем класс modal-window-active которій описан в стилях-->
+  <div class="modal-window">
+    <h2>Я модальное окно</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus, repellendus fugit eaque quasi
+      similique assumenda ex tenetur optio tempora vero impedit obcaecati est error adipisci, itaque, sit quae a?</p>
+    <button class="modal-window-close">Закрыть модалку</button>
+  </div>
   <div class="modal-window">
     <h2>Я модальное окно</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum necessitatibus, repellendus fugit eaque quasi
